--- a/server/package.json
+++ b/server/package.json
@@ -14,10 +14,12 @@
   "dependencies": {
     "@prisma/client": "^5.22.0",
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.3.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "express": "^4.21.1",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "react-query": "^3.39.3"
   },
   "devDependencies": {
     "prisma": "^5.22.0"
